[gd_scene load_steps=4 format=2]

[ext_resource path="res://animations/Pulse.tres" type="Animation" id=1]
[ext_resource path="res://scripts/Pulsar.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/switch.ogg" type="AudioStream" id=3]

[node name="Pulsar" type="Area2D" groups=[
"pulsar_switchs",
]]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pulse = ExtResource( 1 )

[node name="PulseTimeout" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_shape_entered" from="." to="." method="_on_Pulsar_body_shape_entered"]
[connection signal="timeout" from="PulseTimeout" to="." method="_on_PulseTimeout_timeout"]
